--- a/app/templates/environment/admin.reorder.twig
+++ b/app/templates/environment/admin.reorder.twig
@@ -31,10 +31,10 @@
 
         <div>
             {# primary action #}
-            <input class="btn--action" type="submit" value="Save Order">
+            <input class="btn" type="submit" value="Save Order">
 
             {# secondary actions #}
-            <a class="btn secondary-action" href="{{ urlFor('environments') }}">View all environments</a>
+            <a class="secondary-action" href="{{ urlFor('environments') }}">Cancel</a>
         </div>
     </form>
 {% endblock %}
