--- a/app/templates/group/group.twig
+++ b/app/templates/group/group.twig
@@ -67,7 +67,7 @@
         {% if not repos %}
         <li class="choice-list__choice">
             <form action="{{ urlFor('group.admin.remove.handle', {id: group.id}) }}" method="post">
-                <input class="btn--destructive secondary-action" type="submit" value="Remove">
+                <input class="btn--destructive secondary-action" type="submit" value="Remove Group">
             </form>
         </li>
         {% endif %}
