--- a/app/templates/server/servers.twig
+++ b/app/templates/server/servers.twig
@@ -29,7 +29,7 @@
     <div>
         {# primary action #}
         {% if isAdmin %}
-            <a class="btn--action" href="{{ urlFor('server.admin.add') }}">Add Server</a>
+            <a class="btn" href="{{ urlFor('server.admin.add') }}">Add Server</a>
         {% endif %}
     </div>
 {% endblock %}
