--- a/app/templates/user/user.edit.twig
+++ b/app/templates/user/user.edit.twig
@@ -7,8 +7,8 @@
 {% endblock %}
 
 {% block actions %}
-    <input class="btn--action" type="submit" value="Save">
-    <a class="btn secondary-action" href="{{ urlFor('user', {'id': profileUser.id}) }}">Cancel</a>
+    <input class="btn" type="submit" value="Save Profile">
+    <a class="secondary-action" href="{{ urlFor('user', {'id': profileUser.id}) }}">Cancel</a>
 {% endblock %}
 
 {% block content %}
