--- a/app/templates/user/user.twig
+++ b/app/templates/user/user.twig
@@ -50,11 +50,11 @@
     <div>
     {% block actions %}
         {# primary action #}
-        <a class="btn--action" href="{{ urlFor('users') }}">View all users</a>
+        <a class="btn" href="{{ urlFor('users') }}">View all users</a>
 
         {% if isAdmin or commonId == profileUser.getId %}
             {# secondary actions #}
-            <a class="btn secondary-action" href="{{ urlFor('user.edit', {'id': profileUser.id}) }}">Edit</a>
+            <a class="btn--action secondary-action" href="{{ urlFor('user.edit', {'id': profileUser.id}) }}">Edit</a>
         {% endif %}
     {% endblock %}
     <div>
