--- a/sass/style.scss
+++ b/sass/style.scss
@@ -51,4 +51,5 @@
 @import "partials/patterns/block-list";
 @import "partials/patterns/alert-bar";
 @import "partials/patterns/choice-list";
+@import "partials/patterns/split";
 @import "partials/patterns/terminal";
