--- a/app/templates/repository/deployment.twig
+++ b/app/templates/repository/deployment.twig
@@ -3,33 +3,40 @@
 {% set page_title = deployment.repository.key~' deployment : '~deployment.server.name %}
 
 {% block content %}
-    <h2><strong>{{ deployment.repository.key }}</strong> deployment</h2>
+    <h2><b>{{ deployment.repository.key }}</b> deployment</h2>
 
-    <h3>Server</h3>
-    <p>{{ deployment.server.name }}</p>
-
-    <h3>Path</h3>
-    <p>{{ deployment.path }}</p>
-
-    <div>
-        {# primary action #}
-        {% if isAdmin %}
-            {# <p>
-                <a class="btn" href="{{ urlFor('repository.admin.edit', {id: deployment.repository.id}) }}">Edit</a>
-            </p>
-            #}
-        {% endif %}
-
-        {# secondary actions #}
-        <a class="btn secondary-action" href="{{ urlFor('repository', {id: deployment.repository.id}) }}">View repository</a>
-
-        {% if isAdmin %}
-            <a class="btn secondary-action" href="{{ urlFor('repository.deployments', {id: deployment.repository.id}) }}">Manage all deployments</a>
-
-            <form class="secondary-action" action="{{ urlFor('repository.deployment.admin.remove.handle', {repoId: deployment.repository.id, id: deployment.id}) }}" method="post">
-                <input class="btn" type="submit" value="Remove">
-            </form>
-        {% endif %}
+    <div class="details-box">
+        <dl class="split--left">
+            <dt class="split--left__title">
+                Server
+            </dt>
+            <dd class="split--left__value">
+                {{ deployment.server.name }}
+            </dd>
+            <dt class="split--left__title">
+                Path
+            </dt>
+            <dd class="split--left__value">
+                {{ deployment.path }}
+            </dd>
+        </dl>
     </div>
+
+    {# primary action #}
+    {% if isAdmin %}
+        {# <p>
+            <a class="btn" href="{{ urlFor('repository.admin.edit', {id: deployment.repository.id}) }}">Edit</a>
+        </p> #}
+
+    {% endif %}
+
+    {# secondary actions #}
+    {% if isAdmin %}
+        <a class="btn" href="{{ urlFor('repository.deployments', {id: deployment.repository.id}) }}">Manage all deployments</a>
+
+        <form class="secondary-action" action="{{ urlFor('repository.deployment.admin.remove.handle', {repoId: deployment.repository.id, id: deployment.id}) }}" method="post">
+            <input class="btn--destructive" type="submit" value="Remove">
+        </form>
+    {% endif %}
 
 {% endblock %}
