--- a/sass/scales/base/_tables.scss
+++ b/sass/scales/base/_tables.scss
@@ -97,31 +97,31 @@ td {
 // and it will take up whatever space is left over. You can also use these classes on the
 // <table> element to restrict the width of the whole table.
 ///
-.t5     { width: 5% }
-.t10    { width:10% }
-.t12    { width:12.5% }     // 1/8
-.t15    { width:15% }
-.t20    { width:20% }
-.t25    { width:25% }       // 1/4
-.t30    { width:30% }
-.t33    { width:33.333% }   // 1/3
-.t35    { width:35% }
-.t37    { width:37.5% }     // 3/8
-.t40    { width:40% }
-.t45    { width:45% }
-.t50    { width:50% }       // 1/2
-.t55    { width:55% }
-.t60    { width:60% }
-.t62    { width:62.5% }     // 5/8
-.t65    { width:65% }
-.t66    { width:66.666% }   // 2/3
-.t70    { width:70% }
-.t75    { width:75% }       // 3/4
-.t80    { width:80% }
-.t85    { width:85% }
-.t87    { width:87.5% }     // 7/8
-.t90    { width:90% }
-.t95    { width:95% }
+.t5     { width: 5% !important }
+.t10    { width:10% !important }
+.t12    { width:12.5% !important }     // 1/8
+.t15    { width:15% !important }
+.t20    { width:20% !important }
+.t25    { width:25% !important }       // 1/4
+.t30    { width:30% !important }
+.t33    { width:33.333% !important }   // 1/3
+.t35    { width:35% !important }
+.t37    { width:37.5% !important }     // 3/8
+.t40    { width:40% !important }
+.t45    { width:45% !important }
+.t50    { width:50% !important }       // 1/2
+.t55    { width:55% !important }
+.t60    { width:60% !important }
+.t62    { width:62.5% !important }     // 5/8
+.t65    { width:65% !important }
+.t66    { width:66.666% !important }   // 2/3
+.t70    { width:70% !important }
+.t75    { width:75% !important }       // 3/4
+.t80    { width:80% !important }
+.t85    { width:85% !important }
+.t87    { width:87.5% !important }     // 7/8
+.t90    { width:90% !important }
+.t95    { width:95% !important }
 
 
 //
